org.eclipse.jdt.ui.tests.refactoring/resources/InlineMethodWorkspace/TestCases/invalid/TestInvalidFieldInitializer3.java
package invalid;

public class TestInvalidFieldInitializer3 {
	
	private Object field= /*]*/foo()/*[*/;	
	
	public Object foo() {
		return field;
	}
}
